Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Can result in hang or crash
-
-
Q4/2025 Server Development
Description
Customer is seeing the following error in the error log file
2025-09-01 3:03:18 10421228 [ERROR] mariadbd: Error writing file '/mariadb/bin/logs/bin_logs/bin_log' (errno: 28 "No space left on device") |
But the disk usage shows the disk has ample space in the binary logs partition
2025-09-01-03:03:03, /dev/mapper/vg_mdb-lv_mariadb_tmp, 27044, 25325, 527, 98%, /mariadb/tmp, |
2025-09-01-03:03:03, /dev/mapper/vg_mdb-lv_mariadb_data, 1012773, 733478, 237799, 76%, /mariadb/data, |
2025-09-01-03:03:03, /dev/mapper/vg_mdb-lv_mariadb_bin, 1012773, 338199, 633080, 35%, /mariadb/bin, |
Customer is running an ANALYZE TABLE job with sql_log_bin=0, which consumes more tmpdir space.
But for some reason, it is throwing errors related to the binary log directory.
Additionally, this has also resulted in binary log file corruption, causing replication errors on the slaves
2025-09-01 3:13:12 6 [ERROR] Unexpected break of being relay-logged GTID 1-1-9786113615 event group by the current GTID event 1-1-9786113616 |
2025-09-01 3:13:12 6 [ERROR] Slave I/O: Relay log write failure: could not queue event from master, Internal MariaDB error code: 1595 |
|
2025-09-01 3:29:26 6 [ERROR] Unexpected break of being relay-logged GTID 1-1-9786113615 event group by the current GTID event 1-1-9786113616 |
2025-09-01 3:29:26 6 [ERROR] Slave I/O: Relay log write failure: could not queue event from master, Internal MariaDB error code: 1595 |
Attachments
Issue Links
- duplicates
-
MDEV-27803 MariaDB binlog corruption when "No space left on device" and stuck session killed by client
-
- Confirmed
-